Fix the spacing above the footer on the frontend

--- a/mediacore/public/styles/base.css
+++ b/mediacore/public/styles/base.css
@@ -112,6 +112,7 @@ a:hover {
 	color: #a9afb4;
 	font-weight: bold;
 	text-shadow: 0 1px #fff;
+	margin-top: 15px;
 	margin-bottom: 15px;
 }
 .mcore-foot-link:link,
